--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--About me section-->
     <div class="content-section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>My name is Robert Ruelas. I am a billingual a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American<br> 
+        <p>My name is Robert Ruelas. I am a billingual results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American<br> 
             that can help troubleshoot your hardware or elevate your next project. <br> 
             I'm also the co-founder and creative director of And Venus, 
             a musical project that provides insight into the psychology of music.<br>
@@ -76,6 +76,10 @@
             <li>Leadership</li>
             <li>Customer Service</li>
             <li>Management</li>
+            <li>Adaptability</li>
+            <li>Data Analysis</li>
+            <li>Statistical Analysis</li>
+            <li>Research Methodologies</li>
             <li>Human interaction and human factors</li>
             <li>Behavioral Psychology</li>
             <li>Tests and measurements</li>
@@ -111,6 +115,34 @@
 
 
 <!-- Experience section -->
+ <!-- Starbucks work -->
+    <div class="content-section" id="experience" data-aos="fade-up">
+        <div class="experience-card">
+            <a href="https://www.starbucks.com" target="_blank">
+            <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo"></a>
+            <h3>Starbucks</h3>
+            <p>Manager</p>
+            <p>March 2007 - Present</p>
+            <div class="accordion-item">
+                <button class="accordion-button">View Duties</button>
+                <div class="accordion-content">
+                    <ul>
+                        <ul>Customer service and customer connection</ul>
+                        <ul>Staff training and development</ul>
+                        <ul>Inventory management and ordering supplies</ul>
+                        <ul>Scheduling and labor management</ul>
+                        <ul>Implementing company policies and procedures</ul>
+                        <ul>Managment</ul>
+                        <ul>Cash management and maintaining food quality control</ul>
+                        <ul>Ensuring a clean and positive work environment</ul>
+                        <ul>Mentoring employees for growth and advancement within the company</ul>
+                        <ul>Organizing and maintaining product flow in accordance with the planogram</ul>    
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
 <!--Apple work--> 
     <div class="content-section" id="experience" data-aos="fade-up">
         <h2>Experience</h2>
@@ -129,6 +161,19 @@
                         <ul>Software-related assistance, including setup, configuration, and updates</ul>
                         <ul>Accurate and confidential record-keeping to track trends and improve processes</ul>
                         <ul>Practical use of SwiftUI/debugging</ul>
+                        <ul>Collaboration with cross-functional teams to resolve complex technical issues</ul>
+                        <ul>Providing training and mentorship to junior team members</ul>
+                        <ul>Staying up-to-date with the latest Apple products, services, and technologies</ul>
+                        <ul>Maintaining a clean and organized work environment</ul>
+                        <ul>Delivering exceptional customer service and support</ul>
+                        <ul>Meeting and exceeding performance metrics and goals</ul>
+                        <ul>Contributing to a positive team culture and work environment</ul>
+                        <ul>Staying current with industry trends and advancements in technology</ul>
+                        <ul>Participating in ongoing training and development opportunities</ul>
+                        <ul>Ensuring compliance with company policies and procedures</ul>
+                        <ul>Providing feedback and suggestions for process improvements</ul>
+                        <ul>Maintaining confidentiality and security of customer information</ul>
+                        <ul>Effective communication with customers and team members</ul>
                         <ul>Technical Expertise</ul>
                         <ul>Product Demonstrations</ul>
                         <ul>Repair Maintanence</ul>
@@ -143,28 +188,7 @@
             </div>
         </div>
     </div>
-<!-- Starbucks work -->
-    <div class="content-section" id="experience" data-aos="fade-up">
-        <div class="experience-card">
-            <a href="https://www.starbucks.com" target="_blank">
-            <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo"></a>
-            <h3>Starbucks</h3>
-            <p>Manager</p>
-            <p>March 2007 - 2018</p>
-            <div class="accordion-item">
-                <button class="accordion-button">View Duties</button>
-                <div class="accordion-content">
-                    <ul>
-                        <ul>Customer service and customer connection</ul>
-                        <ul>Cash management and maintaining food quality control</ul>
-                        <ul>Ensuring a clean and positive work environment</ul>
-                        <ul>Mentoring employees for growth and advancement within the company</ul>
-                        <ul>Organizing and maintaining product flow in accordance with the planogram</ul>    
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>    
+    
   <!-- Shape of Behavior work -->
   <div class="content-section" id="experience" data-aos="fade-up">
     <div class="experience-card">
@@ -192,6 +216,7 @@
         </div>
     </div>
 </div>
+
 <!--More experience-->
     <div class="content-section" id="experience" data-aos="fade-up">
         <div class="experience-card">
